--- a/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/update.html
+++ b/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/update.html
@@ -12,7 +12,7 @@
 
 <a th:href="@{/}">Back to product list</a>
 
-<form th:action="update1" method="post" th:object="${products}">
+<form action="/update" method="post" th:object="${products}">
     <table class="table table-striped table-inverse table-responsive">
         <tr>
             <td>Id:</td>
