--- a/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/detail.html
+++ b/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/detail.html
@@ -11,32 +11,32 @@
 
 <h3>Detail Product</h3>
 
-<a th:href="@{/product}">Back to product list</a>
+<!--<a th:href="@{/product}">Back to product list</a>-->
 
-<table th:object="${product}" class="table table-striped table-inverse table-responsive">
+<table th:object="${products}" class="table table-striped table-inverse table-responsive">
     <tr>
         <td>Id:</td>
-        <td th:text="${product.id}"></td>
+        <td th:text="${products.id}"></td>
     </tr>
 
     <tr>
         <td>Name:</td>
-        <td th:text="${product.name}"></td>
+        <td th:text="${products.name}"></td>
     </tr>
 
     <tr>
         <td>Price:</td>
-        <td th:text="${product.price}"></td>
+        <td th:text="${products.price}"></td>
     </tr>
 
     <tr>
         <td>Describe:</td>
-        <td th:text="${product.describe}"></td>
+        <td th:text="${products.describe}"></td>
     </tr>
 
     <tr>
         <td>Producer:</td>
-        <td th:text="${product.producer}"></td>
+        <td th:text="${products.producer}"></td>
 </table>
 
 <footer th:replace="/layout :: footer"></footer>
