--- a/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/create.html
+++ b/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/create.html
@@ -11,8 +11,8 @@
 <h2>NEW PRODUCT</h2>
 <form action="/create1" method="post" th:object="${product}">
     <div class="input-group">
-        <label for="id">ID</label>
-        <input id="id" type="number" th:field="*{id}">
+<!--        <label for="id">ID</label>-->
+<!--        <input id="id" type="number" th:field="*{id}">-->
 
         <label for="name">NAME PRODUCT</label>
         <input id="name" type="text" th:field="*{name}">
