--- a/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/detail.html
+++ b/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/detail.html
@@ -10,7 +10,7 @@
 <body>
 
 <h3>Detail Product</h3>
-
+<p style="color: green" th:text="${mess}"></p>
 <!--<a th:href="@{/product}">Back to product list</a>-->
 
 <table th:object="${products}" class="table table-striped table-inverse table-responsive">
