--- a/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/update.html
+++ b/ss3_view_thymeleaf/bai_tap/manager_product/src/main/webapp/WEB-INF/views/update.html
@@ -10,9 +10,9 @@
 <body>
 <h3>Update product</h3>
 
-<a th:href="@{/}">Back to product list</a>
+<a th:href="@{/product}">Back to product list</a>
 
-<form action="/update" method="post" th:object="${products}">
+<form action="/product/update" method="post" th:object="${products}">
     <table class="table table-striped table-inverse table-responsive">
         <tr>
             <td>Id:</td>
