--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/home.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/home.html
@@ -3,39 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-<h1 class="text-center">List Blog</h1>
-<div>
-    <a th:href="@{/add}" class="btn btn-primary">Create</a>
-    <p class="float-end me-2 bg-primary" th:text="${msg}"></p>
-</div>
-<table class="table container-fluid">
+<p th:if="${msg!=null}" th:text="${msg}"></p>
+<h1><a th:href="@{/blog/create-form}">Thêm mới blog</a></h1>
+<table class="table">
+    <thead>
     <tr>
-        <th>STT</th>
-        <th>Title</th>
-        <th>Heading</th>
-        <th>Date Submitted</th>
-        <th>Edit</th>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Content</th>
+        <th>date</th>
+        <th>author</th>
         <th>Delete</th>
+        <th>Update</th>
+        <th>Remove</th>
     </tr>
-    <tr th:each="blog , iterStats : ${blogList}">
-        <td th:text="${iterStats.count}"></td>
-        <td><a class="text-decoration-none" th:href="@{/detail/{id}(id=${blog.getId()})}"
-               th:text="${blog.getTitle()}"></a></td>
-        <td th:text="${blog.getHeading()}"></td>
-        <td th:text="${blog.getDateSubmitted()}"></td>
-        <td>
-            <a th:href="@{/edit/{id}(id=${blog.getId()})}">
-                <button>Edit</button>
-            </a>
-        </td>
-        <td>
-            <a th:href="@{/delete/{id}(id=${blog.getId()})}">
-                <button>Delete</button>
-            </a>
-        </td>
+    </thead>
+    <tbody>
+    <tr th:each="blog, iterStats: ${blogList}">
+        <td th:text="${blog.id}"></td>
+        <td th:text="${blog.nameBlog}"></td>
+        <td th:text="${blog.content}"></td>
+        <td th:text="${blog.date}"></td>
+        <td th:text="${blog.author}"></td>
+        <td><a th:href="@{/blog/delete/{id}(id=${blog.id})}">Delete</a></td>
+        <td><a th:href="@{/blog/update/{id}(id=${blog.id})}">Update</a></td>
+        <td><a th:href="@{/blog/detail/{id}(id=${blog.id})}">Detail</a></td>
     </tr>
+    </tbody>
 </table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
