--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
@@ -3,33 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-<form th:action="@{/add}" method="post" th:object="${blog}">
-    <table>
+<form th:action="@{/blog/update}" method="post" th:object="${blog}">
+    <table class="table table-striped table-inverse table-responsive">
         <tr>
             <td><label>Title: </label></td>
-            <td><input type="text" th:field="*{title}"></td>
+            <td><input type="text" th:field="*{nameBlog}"></td>
         </tr>
         <tr>
-            <td><label>Heading: </label></td>
-            <td><input type="text" th:field="*{heading}"></td>
+            <td><label>Author: </label></td>
+            <td><input type="text" th:field="*{author}"></td>
         </tr>
         <tr>
             <td><label>Date Submitted: </label></td>
-            <td><input type="date" th:field="*{dateSubmitted}"></td>
+            <td><input type="date" th:field="*{date}"></td>
         </tr>
         <tr>
             <td><label>Content</label></td>
             <td><textarea th:field="*{content}"></textarea></td>
         </tr>
         <tr>
-            <td><a th:href="@{/}">back</a></td>
+            <td><a th:href="@{/blog}">back</a></td>
             <td>
                 <button type="submit">Submit</button>
             </td>
         </tr>
     </table>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
