--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/create.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/create.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Create Blog</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
-<body>
-<form action="/blog/create" method="post" th:object="${blog}">
+<body class="container">
+<h2>NEW BLOG</h2>
+<form action="/blogs" method="post" th:object="${blogs}">
     <div class="input-group">
+        <label for="id">ID</label>
+        <input type="hidden"
+               class="form-control" name="" id="id" aria-describedby="helpId" placeholder="input id new blog"
+               th:field="*{id}">
+        <label for="nameBlog">NAME BLOG</label>
+        <input type="text"
+               class="form-control" name="" id="nameBlog" aria-describedby="helpId" placeholder="input name new blog"
+               th:field="*{nameBlog}">
+        <label for="content">CONTENT</label>
+        <input type="text"
+               class="form-control" name="" id="content" aria-describedby="helpId" placeholder="input price new blog"
+               th:field="*{content}">
+        <label for="date">DATE</label>
+        <input type="text"
+               class="form-control" name="" id="date" aria-describedby="helpId"
+               placeholder="input describe new product" th:field="*{date}">
+        <label for="date">CATEGORY</label>
+        <select th:field="*{category}">
+            <option th:each="blog :${category}" th:value="${blog.getId()}">
+                <p th:text="${blog.getName()}"></p>
+            </option>
+        </select>
 
-
-        Name Blog: <input type="text" th:field="*{nameBlog}">
-        <br>
-        <br>
-        Content: <input type="text" th:field="*{content}">
-        <br>
-        <br>
-        Date: <input type="date" th:field="*{date}">
-        <br>
-        <br>
-        Author: <input type="text" th:field="*{author}">
-        <br>
-        Name Category: <input type="text" th:field="*{category.nameCategory}">
-        <br>
         <button type="submit" class="btn btn-primary">Save</button>
     </div>
 </form>
