--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Update Blog</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
 <body>
-<form th:action="@{/blog/update}" method="post" th:object="${blog}">
-    <table class="table table-striped table-inverse table-responsive">
-        <tr>
-            <td><label>Title: </label></td>
-            <td><input type="text" th:field="*{nameBlog}"></td>
-        </tr>
-        <tr>
-            <td><label>Author: </label></td>
-            <td><input type="text" th:field="*{author}"></td>
-        </tr>
-        <tr>
-            <td><label>Date Submitted: </label></td>
-            <td><input type="date" th:field="*{date}"></td>
-        </tr>
-        <tr>
-            <td><label>Content</label></td>
-            <td><textarea th:field="*{content}"></textarea></td>
-        </tr>
-        <tr>
-            <td><a th:href="@{/blog}">back</a></td>
-            <td>
-                <button type="submit">Submit</button>
-            </td>
-        </tr>
-    </table>
+<h1>Update Blog</h1>
+<form action="/blogs/update" th:object="${blogs}" method="post">
+    <div class="mb-3">
+        <input type="hidden" th:field="*{id}" class="form-control" id="exampleInputEmail112"
+               aria-describedby="emailHelp">
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Name</label>
+        <input type="text" th:field="*{nameBlog}" class="form-control" id="exampleInputEmail1"
+               aria-describedby="emailHelp">
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputEmail2" class="form-label">Content</label>
+        <input type="text" th:field="*{content}" class="form-control" id="exampleInputEmail2"
+               aria-describedby="emailHelp">
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputEmail0" class="form-label">Date</label>
+        <input type="text" th:field="*{date}" class="form-control" id="exampleInputEmail0"
+               aria-describedby="emailHelp">
+    </div>
+    <div class="input-group">
+        <label >Category</label>
+        <select th:field="*{category}">
+            <option th:each="blog :${categories}" th:value="${blog.getId()}">
+                <p th:text="${blog.getName()}"></p>
+            </option>
+        </select>
+    </div>
+    <div>
+        <button type="submit" class="btn btn-primary">Save</button>
+    </div>
 </form>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
