--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/update.html
@@ -40,7 +40,7 @@
         </select>
     </div>
     <div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
