--- a/ss8_validation/bai_tap/validation_song_info/src/main/resources/templates/update.html
+++ b/ss8_validation/bai_tap/validation_song_info/src/main/resources/templates/update.html
@@ -8,11 +8,38 @@
 </head>
 <body>
 
+<form method="post" th:action="@{/songs/edit}" th:object="${songDto}">
+    <table>
+        <tr>
+            <td><label></label></td>
+            <td><input type="text" th:field="*{id}"></td>
+            <td><span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span></td>
+        </tr>
+        <tr>
+            <td><label></label></td>
+            <td><input type="text" th:field="*{name}"></td>
+            <td><span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span></td>
+        </tr>
+        <tr>
+            <td><label></label></td>
+            <td><input type="text" th:field="*{singer}"></td>
+            <td><span th:if="${#fields.hasErrors('singer')}" th:errors="*{singer}"></span></td>
+        </tr>
+        <tr>
+            <td><label></label></td>
+            <td><input type="text" th:field="*{kindOfMusic}"></td>
+            <td><span th:if="${#fields.hasErrors('kindOfMusic')}" th:errors="*{kindOfMusic}"></span></td>
+        </tr>
+        <tr>
+            <a href="/songs">Back</a>
+        </tr>
+        <tr>
+            <button type="submit">Submit</button>
+        </tr>
+    </table>
 
-<form method="">
+<p th:text="${msg}"></p>
 
-
-</form>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
