--- a/ss8_validation/bai_tap/validation_song_info/src/main/resources/templates/create.html
+++ b/ss8_validation/bai_tap/validation_song_info/src/main/resources/templates/create.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" th:action="@{/songs/create1}" th:object="${songDto}">
+<form method="post" th:action="@{/songs/save}" th:object="${songDto}">
     <table>
         <tr>
             <td><label></label></td>
