--- a/ss9_AOP_&_Exception_Handing/bai_tap/book_application/src/main/resources/templates/list.html
+++ b/ss9_AOP_&_Exception_Handing/bai_tap/book_application/src/main/resources/templates/list.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body class="container">
+<p  th:text="${mess}"></p>
+
+
 <table class="table" border="1">
     <thead>
     <tr>
@@ -25,6 +29,8 @@
         <td th:text="${book.quantity}"></td>
         <td><a th:href="@{/books/{id}/borrow(id=${book.id})}">Borrow</a></td>
     </tr>
+
 </table>
+
 </body>
 </html>
