--- a/ss10_session_cookie/bai_tap/gio_hang/src/main/resources/templates/cart.html
+++ b/ss10_session_cookie/bai_tap/gio_hang/src/main/resources/templates/cart.html
@@ -3,49 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Cart</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
 <p>
-  <a href="/shop">Shop</a>
+    <a href="/shop">Shop</a>
 </p>
-<h1>Your Cart</h1>
+<h1>Giỏ hàng</h1>
 <form th:action="@{/shop}" th:object="${cart}" method="post">
-  <h3>Total Items: <span th:text="${cart.countItemQuantity()}"></span></h3>
-  <h3>Total Products: <span th:text="${cart.countProductQuantity()}"></span></h3>
-  <table border="1">
-    <tr>
-      <th>Item</th>
-      <th>subtraction</th>
-      <th>addition</th>
-      <th>Price</th>
-    </tr>
-    <tr th:each="product: ${cart.products}">
-      <td th:text="${product.getKey().name}"></td>
+    <span>Danh mục: <span th:text="${cart.countItemQuantity()}"></span></span>
+    <span>Số lượng: <span th:text="${cart.countProductQuantity()}"></span></span>
+    <table class="table table-hover" style="border: solid">
+        <tr>
+            <th>Item</th>
+            <th>subtraction</th>
+            <th>addition</th>
+            <th>Price</th>
+            <th>Detail</th>
+        </tr>
+        <tr th:each="product: ${cart.products}">
+            <td th:text="${product.getKey().name}"></td>
 
-      <td>
+            <td>
 
-        <span th:text="${product.getValue()}"></span>
-        <a style=" text-decoration: none;" id="reduce_button" th:href="@{/add/__${product.getKey().id}__(action='show1')}"
-           th:text="${'-'}"></a>
-      </td>
+                <span th:text="${product.getValue()}"></span>
+                <a style=" text-decoration: none;" id="reduce_button"
+                   th:href="@{/add/__${product.getKey().id}__(action='show1')}"
+                   th:text="${'-'}"></a>
+            </td>
 
-      <td>
+            <td>
 
-        <span th:text="${product.getValue()}"></span>
-        <a style=" text-decoration: none;" id="increase_button" th:href="@{/add/__${product.getKey().id}__(action='show')}"
-           th:text="${'+'}"></a>
-      </td>
+                <span th:text="${product.getValue()}"></span>
+                <a style=" text-decoration: none;" id="increase_button"
+                   th:href="@{/add/__${product.getKey().id}__(action='show')}"
+                   th:text="${'+'}"></a>
+            </td>
 
-      <td th:text="${product.getKey().price}"></td>
-
-    </tr>
-    <tr>
-      <td>Total</td>
-      <td></td>
-      <td th:text="${cart.countTotalPayment()}"></td>
-    </tr>
-  </table>
+            <td th:text="${product.getKey().price}"></td>
+            <td><a th:href="@{/detail/__${product.getKey().id}__}">Detail</a></td>
+        </tr>
+        <tr>
+            <td>Total</td>
+            <td></td>
+            <td th:text="${cart.countTotalPayment()}"></td>
+        </tr>
+    </table>
 </form>
+<form method="post" action="/checkout">
+    <button type="submit">Thanh toán</button>
+</form>
+<div th:if="${msg}" th:text="${msg}" class="alert alert-success"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
