--- a/ss10_session_cookie/bai_tap/gio_hang/src/main/resources/templates/detail.html
+++ b/ss10_session_cookie/bai_tap/gio_hang/src/main/resources/templates/detail.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Shop</title>
+    <title>Chi tiết đơn hàng</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<p>
-    <a href="/shopping-cart">Giỏ hàng</a>
-</p>
-<div class="container" style="width: 80%">
-
-
 <table class="table table-hover" style="border: solid">
-    <tr>
-        <td>Tên sản phẩm</td>
-        <td>Giá ban</td>
-        <td>Giỏ hàng</td>
-    </tr>
-    <th:block th:each="product:${products}">
-        <tr>
-            <td th:text="${product.name}"></td>
-            <td th:text="${product.price}"></td>
-            <td><a th:href="@{/add/__${product.id}__(action='list')}">Thêm vào giỏ </a></td>
-        </tr>
-    </th:block>
+  <tr>
+    <th>Name</th>
+    <th>Price</th>
+  </tr>
+  <tr>
+    <td th:text="${products.get().name}"></td>
+    <td th:text="${products.get().price}"></td>
+  </tr>
 </table>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-</div>
 </body>
 </html>
